# ArcSoft_opencv_recognization

samplecode/: CMakeLists.txt  arcsoft_afd_samplecode.cpp
